--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,4 +4,16 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+# Oops! Page Not Found
+
+![404 Error](https://media.giphy.com/media/14uQ3cOFteDaU/giphy.gif)
+
+## Sorry, the page you are looking for does not exist.
+
+### Here are some things you can try:
+- Go back to the [homepage](/)
+- Check the URL for typos
+- Contact the website administrator
+
+We apologize for the inconvenience.
+
