--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,7 +4,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-# Oops! Page Not Found
+# Oops!
 
 ![404 Error](https://media.giphy.com/media/14uQ3cOFteDaU/giphy.gif)
 
